--- a/package.json
+++ b/package.json
@@ -5,10 +5,19 @@
     "start": "next start"
   },
   "dependencies": {
+    "@apollo/react-hooks": "^3.1.5",
+    "@apollo/react-ssr": "^3.1.5",
+    "apollo-boost": "^0.4.7",
+    "apollo-link-http": "^1.5.17",
+    "graphql": "^15.0.0",
     "next": "^9.4.0",
+    "next-apollo": "^3.1.10",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "reactstrap": "^9.2.0",
     "styled-jsx": "^5.1.2"
+  },
+  "volta": {
+    "node": "14.20.0"
   }
 }
